# neurobeacon

./: index.html  package-lock.json  package.json
amplify/: backend.ts
amplify/auth/: resource.ts
amplify/data/: addGameHx.js  addStats.js  addUserAttributes.js  addUserEmbed.js  addUserState.js  getStats.js  getUserAttributes.js  getUserEmbed.js  getUserState.js  resource.ts  transactData.js  updateStats.js
model/deployment/primary_model/: Dockerfile  dynamoFunctions.py  model_name.pth  model_pipeline.pkl  pyproject.toml
model/deployment/primary_model/src/: main.py  pickl_fastapi.py
model/evaluation/: customModel.py  syntheticDataRewardTest.py  visualization_functions.py  visualization_run.ipynb
model/training/: sagemaker_train_with_metrics.ipynb  sagemaker_training.ipynb
public/: adv_problems.json  expanded_problems.json  problems.json  sudoku_boards.json
public/images/: image_list.json
src/: App.js  App.js:Zone.Identifier  App.jsx  index.jsx  styles.css
src/components/: Controls.js  Dashboard.js  Dashboard.jsx  Footer.js  Footer.jsx  GameArea.jsx  GamePage.js  GamePage.jsx  Header.jsx  NavBar.js  NavBar.jsx  Panel.js  Panel.jsx  Redirection.jsx  TestPage.jsx  WelcomePage.js  WelcomePage.jsx
src/context/: GameHxContext.jsx  ModelContext.jsx  ThemeContext.jsx  UserContext.jsx  UserStateContext.jsx  UserStatisticsContext.jsx
src/data/: data.js  final_trivia_questions.json
src/functions/: Model.jsx
src/games/: FractionAdditionGame.js  FractionAdditionGame.jsx  FractionAdditionGame2.js  FractionAdditionGame3.js  MemoryGame.jsx  ReactionGame.jsx  (+3 more)
(+5 files in other folders)
